src/objects/BMCServiceDesk__BMC_ConnectivitySegment__c.object
<CustomObject>
    <description>BMC_ConnectivitySegment. CMDB Class that groups endpoints of the same type (for example, Ethernet, fiber channel, or token ring) that can communicate without the assistance of bridging or routing services. Such endpoints are sometimes referred to as members of the same &quot;collision domain.&quot; The BMC_InSegment class is used to relate instances of this class to those endpoints, which are instances of BMC_LANEndpoint.   In the Name attribute of this class, enter a hash code based on the list of physical addresses that belong to the segment and the name of the LAN instance that the segment belongs to.   In the NameFormat attribute, enter the formula that generates the Name value.   This class corresponds to the DMTF CIM_LANConnectivitySegment class.</description>
    <fields>
        <fullName>BMCServiceDesk__ConnectivityType__c</fullName>
        <label>Connectivity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Ethernet</fullName>
                </value>
                <value>
                    <fullName>TokenRing</fullName>
                </value>
                <value>
                    <fullName>FDDI</fullName>
                </value>
                <value>
                    <fullName>FC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Fixed__c</fullName>
        <label>Fixed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NetworkID__c</fullName>
        <label>Network ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OtherTypeDescription__c</fullName>
        <label>Other Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Connectivity Segment</label>
    <nameField>
        <label>BMC_ConnectivitySegment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connectivity Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>